0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py:


NDDataset creation and plotting example
=======================================
In this example, we create a 3D NDDataset from scratch,
and then we plot one section (a 2D plane)

.. sphinx_gallery_thumbnail_number = 2

.. GENERATED FROM PYTHON SOURCE LINES 18-21

Creation
--------
Now we will create a 3D NDDataset from scratch

.. GENERATED FROM PYTHON SOURCE LINES 21-23

.. code-block:: default

    import numpy as np








.. GENERATED FROM PYTHON SOURCE LINES 24-25

As usual, we start by loading the spectrochempy library

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: default

    import spectrochempy as scp









.. GENERATED FROM PYTHON SOURCE LINES 29-34

Coordinates
+++++++++++
The `Coord` object allows creating an array of coordinates directly with
``Coord.linspace``, attaching metadata (units, labels, title) in a single
step — no separate numpy array needed.

.. GENERATED FROM PYTHON SOURCE LINES 34-45

.. code-block:: default

    coord0 = scp.Coord.linspace(
        200.0,
        300.0,
        3,
        labels=["cold", "normal", "hot"],
        units="K",
        title="temperature",
    )
    coord1 = scp.Coord.linspace(0.0, 60.0, 100, units="minutes", title="time-on-stream")
    coord2 = scp.Coord.linspace(4000.0, 1000.0, 100, units="cm^-1", title="wavenumber")








.. GENERATED FROM PYTHON SOURCE LINES 46-47

Labels can be useful for instance for indexing

.. GENERATED FROM PYTHON SOURCE LINES 47-51

.. code-block:: default

    a = coord0["normal"]
    print(a)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Coord: [float64] K (size: 1)




.. GENERATED FROM PYTHON SOURCE LINES 52-56

Data and nd-Dataset
+++++++++++++++++++
``scp.fromfunction`` builds an NDDataset directly from a Python function.
The function receives the coordinate arrays and returns the intensity values.

.. GENERATED FROM PYTHON SOURCE LINES 56-72

.. code-block:: default

    def synth_func(temperature, time, wavenumber):
        return np.sin(2.0 * np.pi * wavenumber / 4000.0) * np.exp(-time / 60) * temperature


    mydataset = scp.fromfunction(
        synth_func,
        coordset=[coord0, coord1, coord2],
        title="Absorbance",
        units="absorbance",
    )
    mydataset.description = """Dataset example created for this tutorial.
    It's a 3-D dataset (with dimensionless intensity: absorbance )"""
    mydataset.name = "An example from scratch"
    mydataset.author = "Blake and Mortimer"
    print(mydataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset: [float64] a.u. (shape: (z:3, y:100, x:100))




.. GENERATED FROM PYTHON SOURCE LINES 73-74

In a Jupyter notebook, the NDDataset is displayed as follows (click on  the arrow on the left to expand the metadata):

.. GENERATED FROM PYTHON SOURCE LINES 74-77

.. code-block:: default


    mydataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [An example from scratch] — float64, shape: (z:3, y:100, x:100), a.u.</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">An example from scratch</div></div>
    <div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">Blake and Mortimer</div></div>
    <div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-16 02:57:19+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">description</div><div>:</div><div class="attr-value">Dataset example created for this tutorial.<br/>It's a 3-D dataset (with dimensionless intensity: absorbance )</div></div>
    <div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-16 02:57:19+00:00> Created using method : fromfunction</div></div>
    <div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">Absorbance</div></div>
    <div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[[    1236     1227 ...    318.4      309]<br/>  [    1224     1214 ...    315.2    305.9]<br/>  ...<br/>  [   459.3    455.9 ...    118.3    114.8]<br/>  [   454.7    451.3 ...    117.1    113.7]]<br/><br/> [[    1531     1519 ...    394.3    382.7]<br/>  [    1515     1504 ...    390.3    378.8]<br/>  ...<br/>  [   568.8    564.5 ...    146.5    142.2]<br/>  [   563.1    558.9 ...      145    140.8]]<br/><br/> [[    1816     1802 ...    467.7      454]<br/>  [    1798     1784 ...      463    449.4]<br/>  ...<br/>  [   674.8    669.7 ...    173.8    168.7]<br/>  [   668.1      663 ...    172.1      167]]] a.u.</div></div></div>
    <div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(z:3, y:100, x:100)</div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">100</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">wavenumber</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[    4000     3970 ...     1030     1000] cm⁻¹</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">100</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">time-on-stream</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       0    0.606 ...    59.39       60] min</div></div></div>
    </details></div>
    <div class="scp-output section"><details><summary>Dimension `z`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">3</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">temperature</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[     200      250      300] K</div></div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  cold   normal   hot]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 78-81

We want to plot a section of this 3D NDDataset:

NDDataset can be sliced like conventional numpy-array...

.. GENERATED FROM PYTHON SOURCE LINES 81-83

.. code-block:: default

    new = mydataset[..., 0]








.. GENERATED FROM PYTHON SOURCE LINES 84-85

or maybe more conveniently in this case, using an axis labels:

.. GENERATED FROM PYTHON SOURCE LINES 85-87

.. code-block:: default

    new = mydataset["hot"]








.. GENERATED FROM PYTHON SOURCE LINES 88-92

To plot a dataset, use the `plot` method (generic plot).
As the section NDDataset is 2D, a lines plot is displayed by default. As you can see, the x-axis is in wavenumber
and the ordinate axis is in absorbance. Note that in this case, the default `NDDataset.plot()` command is equivalent to
`plot_lines()`.

.. GENERATED FROM PYTHON SOURCE LINES 92-94

.. code-block:: default

    _ = new.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_001.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 95-98

Note also that a colormap ('viridis') has been automatically set for the lines. This is because the y-dimension of the
dataset has float coordinates (they correspond to a time). In such a case it is easy to add a colorbar explaining the
colors <-> time value correspondence:

.. GENERATED FROM PYTHON SOURCE LINES 98-101

.. code-block:: default


    _ = new.plot(colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_002.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 102-105

If the y-dimension had no coordinates or consecutive integer coordinates starting by `0`or `1`, a categorical
color map would have been chosen. The default behavior can be overridden by explicitly passing a colormap. For instance,
if we want to use a categorical colormap instead of a sequential one, we can do:

.. GENERATED FROM PYTHON SOURCE LINES 105-108

.. code-block:: default


    _ = new[:, 0:20].plot(cmap="tab20")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_003.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 109-111

But it is possible to display image plot instead (note that the x-axis is in wavenumber and
the y-axis is in time-on-stream)

.. GENERATED FROM PYTHON SOURCE LINES 111-113

.. code-block:: default

    _ = new.plot_image()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_004.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 114-115

or contour plot  (note that

.. GENERATED FROM PYTHON SOURCE LINES 115-118

.. code-block:: default

    _ = new.plot_map()





.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_005.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 119-121

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 121-123

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.219 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_a_create_dataset.py <plot_a_create_dataset.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_a_create_dataset.ipynb <plot_a_create_dataset.ipynb>`
