0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_a_create_dataset.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py:


NDDataset creation and plotting example
=======================================
In this example, we create a 3D NDDataset from scratch,
and then we plot one section (a 2D plane)

.. GENERATED FROM PYTHON SOURCE LINES 16-19

Creation
--------
Now we will create a 3D NDDataset from scratch

.. GENERATED FROM PYTHON SOURCE LINES 19-21

.. code-block:: Python

    import numpy as np








.. GENERATED FROM PYTHON SOURCE LINES 22-23

As usual, we start by loading the spectrochempy library

.. GENERATED FROM PYTHON SOURCE LINES 23-26

.. code-block:: Python

    import spectrochempy as scp









.. GENERATED FROM PYTHON SOURCE LINES 27-32

Coordinates
~~~~~~~~~~~
The ``Coord`` object allows creating an array of coordinates directly with
``Coord.linspace``, attaching metadata (units, labels, title) in a single
step — no separate numpy array needed.

.. GENERATED FROM PYTHON SOURCE LINES 32-43

.. code-block:: Python

    coord0 = scp.Coord.linspace(
        200.0,
        300.0,
        3,
        labels=["cold", "normal", "hot"],
        units="K",
        title="temperature",
    )
    coord1 = scp.Coord.linspace(0.0, 60.0, 100, units="minutes", title="time-on-stream")
    coord2 = scp.Coord.linspace(4000.0, 1000.0, 100, units="cm^-1", title="wavenumber")








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Labels can be useful for instance for indexing

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. code-block:: Python

    a = coord0["normal"]
    a







.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>Coord [Coord_1ea7a013:temperature] — float64, size: 1, K</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">1</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">temperature</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[     250] K</div></div></div><div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  normal]</div></div></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 50-54

Data and nd-Dataset
~~~~~~~~~~~~~~~~~~~
``scp.fromfunction`` builds an NDDataset directly from a Python function.
The function receives the coordinate arrays and returns the intensity values.

.. GENERATED FROM PYTHON SOURCE LINES 54-70

.. code-block:: Python

    def synth_func(temperature, time, wavenumber):
        return np.sin(2.0 * np.pi * wavenumber / 4000.0) * np.exp(-time / 60) * temperature


    mydataset = scp.fromfunction(
        synth_func,
        coordset=[coord0, coord1, coord2],
        title="Absorbance",
        units="absorbance",
    )
    mydataset.description = """Dataset example created for this tutorial.
    It's a 3-D dataset (with dimensionless intensity: absorbance )"""
    mydataset.name = "An example from scratch"
    mydataset.author = "Blake and Mortimer"
    mydataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [An example from scratch] — float64, shape: (z:3, y:100, x:100), a.u.</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">An example from scratch</div></div><div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">Blake and Mortimer</div></div><div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-18 17:34:52+00:00</div></div><div class="scp-output section"><div class="attr-name">description</div><div>:</div><div class="attr-value">Dataset example created for this tutorial.<br/>It's a 3-D dataset (with dimensionless intensity: absorbance )</div></div><div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-18 17:34:52+00:00> Created using method : fromfunction</div></div><div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">Absorbance</div></div><div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[[    1236     1227 ...    318.4      309]<br/>  [    1224     1214 ...    315.2    305.9]<br/>  ...<br/>  [   459.3    455.9 ...    118.3    114.8]<br/>  [   454.7    451.3 ...    117.1    113.7]]<br/><br/> [[    1531     1519 ...    394.3    382.7]<br/>  [    1515     1504 ...    390.3    378.8]<br/>  ...<br/>  [   568.8    564.5 ...    146.5    142.2]<br/>  [   563.1    558.9 ...      145    140.8]]<br/><br/> [[    1816     1802 ...    467.7      454]<br/>  [    1798     1784 ...      463    449.4]<br/>  ...<br/>  [   674.8    669.7 ...    173.8    168.7]<br/>  [   668.1      663 ...    172.1      167]]] a.u.</div></div></div><div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(z:3, y:100, x:100)</div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">100</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">wavenumber</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[    4000     3970 ...     1030     1000] cm⁻¹</div></div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">100</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">time-on-stream</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       0    0.606 ...    59.39       60] min</div></div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `z`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">3</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">temperature</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[     200      250      300] K</div></div></div><div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[  cold   normal   hot]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 71-74

We want to plot a section of this 3D NDDataset:

NDDataset can be sliced like conventional numpy-array...

.. GENERATED FROM PYTHON SOURCE LINES 74-76

.. code-block:: Python

    new = mydataset[..., 0]








.. GENERATED FROM PYTHON SOURCE LINES 77-78

or maybe more conveniently in this case, using an axis labels:

.. GENERATED FROM PYTHON SOURCE LINES 78-80

.. code-block:: Python

    new = mydataset["hot"]








.. GENERATED FROM PYTHON SOURCE LINES 81-86

To plot a dataset, use the ``plot`` command (generic plot).
As the section NDDataset is 2D, a stack plot is displayed by default. As you can see, the x-axis is in wavenumber
and the ordinate axis is in absorbance units (au). The y dimension of the dataset is the time-on-stream (in minutes).
Because the time-on-stream values are floats, this triggers the default sequential colormap ('viridis'). The
corresponding values can be seen if ``colorbar`` is passed as ``True``:

.. GENERATED FROM PYTHON SOURCE LINES 86-88

.. code-block:: Python

    _ = new.plot(colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_001.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-95

It is also possible to display this dataset as an image (actually a filled contour plot).
The x is the same as before, but the ordinates are now the time-on-stream values. The color of the pixels is now
related to the value of the absorbance. As the dataset contains both negative and positive values, the default
colormap is diverging (``RdBu``).

sphinx_gallery_thumbnail_number = 2

.. GENERATED FROM PYTHON SOURCE LINES 95-97

.. code-block:: Python

    _ = new.plot(method="image", colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_002.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 98-100

If a dataset contains only positive values, the default colormap is
sequential (``viridis``):

.. GENERATED FROM PYTHON SOURCE LINES 100-103

.. code-block:: Python


    _ = scp.abs(new).plot(method="image", colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_003.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 104-107

.. code-block:: Python

    _ = new.plot(method="contour")
    _ = scp.abs(new).plot(method="contour")




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_004.png
         :alt: plot a create dataset
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_005.png
         :alt: plot a create dataset
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_005.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 108-109

Note that the scp allows one to use this syntax too:

.. GENERATED FROM PYTHON SOURCE LINES 109-111

.. code-block:: Python

    _ = scp.plot_contour(new)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_006.png
   :alt: plot a create dataset
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_a_create_dataset_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 112-114

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 114-116

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.296 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_a_create_dataset.ipynb <plot_a_create_dataset.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_a_create_dataset.py <plot_a_create_dataset.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_a_create_dataset.zip <plot_a_create_dataset.zip>`
